# AI-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  for all anouncment
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: container.py  main.py
apps/api/app/api/: router.py  routes_health.py  routes_integrations.py  routes_schedule.py  routes_tasks.py
apps/api/app/core/: settings.py
apps/api/app/modules/integrations/: models.py  providers.py  service.py
apps/api/app/modules/intelligence/: models.py  scheduler.py  scoring.py  service.py
apps/api/app/modules/knowledge/: in_memory_repository.py  models.py  repository.py
apps/api/tests/: test_scheduler.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/frontend/src/: App.tsx
docs/: api-contract.md  architecture.md  git-workflow.md  product-vision.md  roadmap.md  start-plan.md  team-workflow.md
frontend/src/: App.tsx  index.css
frontend/src/components/: StatCard.tsx  TaskList.tsx  Topbar.tsx
images/: notion.avif
integration_module/integration/: cache_storage.py  conflict_resolver.py  interfaces.py  sync_scheduler.py
integration_module/integration/adapters/: mock_adapter.py
integration_module/models/: sync.py  task.py
legacy/web-prototypes/mail_web/: index.html
study/: index.html  smth.css
web/mail_web/my-ai-assistant/: package-lock.json  package.json
(+3 files in other folders)
